<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clasesActividad.Registro"
    android:orientation="vertical"
    android:background="@drawable/fondo_registro"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:id="@+id/avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/avatar"
        android:textColor="@color/verde"
        android:textSize="22sp"
        android:layout_marginTop="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp">

        <ImageButton
            android:id="@+id/imbIzquierda"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/selector_izquierda"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/imvAvatar"
            android:layout_width="140dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:background="@drawable/marco_registro"/>

        <ImageButton
            android:id="@+id/imbDerecha"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/selector_derecha"
            android:layout_marginLeft="10dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/marco_cinco"
            android:padding="6dp"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:hint="@string/Alias"
            android:textColorHint="@color/negro"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/marco_cinco"
            android:padding="6dp"
            android:layout_marginTop="25dp"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:hint="@string/correo"
            android:textColorHint="@color/negro"
            android:textColor="@color/colorPrimaryDark"/>

        <EditText
            android:id="@+id/regpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/marco_cinco"
            android:layout_marginTop="25dp"
            android:padding="6dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:hint="@string/password"
            android:textColorHint="@color/negro"
            android:textColor="@color/colorPrimaryDark"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnregistro"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/selector_btn_registro"
                android:textSize="16sp"
                android:text="@string/registro"
                android:textColor="@android:color/white" />


        </LinearLayout>

    </LinearLayout>




</LinearLayout>