<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".clasesActividad.Login"
    android:orientation="vertical"
    android:background="@drawable/fondo_login"
    android:padding="20dp"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_weight="8"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="7">

            <TextView
                android:id="@+id/logusuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/logImvAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">

            <EditText
                android:id="@+id/logalias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/marco_cinco"
                android:hint="@string/Alias"
                android:inputType="textPersonName"
                android:padding="6dp"
                android:textColorHint="@color/negro"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />


            <EditText
                android:id="@+id/logpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/marco_cinco"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="6dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/negro"
                android:textSize="16sp"
                android:visibility="visible"/>

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/selector_btn_registro"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnlogRegister"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_btn_registro"
            android:text="@string/registro"
            android:textSize="16sp"
            android:textColor="@android:color/white" />


    </LinearLayout>


    </LinearLayout>